--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 
     <!--!--------Projects----------->     
-    <div class="Projects">
+    <div class="Projects" id="Projects">
         <div class="sec-name-skills"> pro<span>jects</span></div>
         <div class="allProjects" id="onePro">
 
@@ -79,10 +79,10 @@
         <div class="sec-name-cont">Cont<span>act my </span></div>
         <footer>
             <div class="conict">
-                <a href="https://wa.me/1006079972"><img src="./img/icon-frontend/icons8-whatsapp-480.png" alt=""></a>
-                <a href="https://github.com/mohamad-fawzy"><img src="./img/icon-frontend/icons8-github-144.png" alt=""></a>
-                <a href="t.me/mo_codes"><img src="./img/icon-frontend/icons8-telegram-480.png" alt=""></a>
-                <a href="https://www.linkedin.com/in/mohamedweb-developer/"><img src="./img/icon-frontend/icons8-linkedin-480.png" alt=""></a>
+                <a href="https://wa.me/1006079972" target="_blank"><img src="./img/icon-frontend/icons8-whatsapp-480.png" alt=""></a>
+                <a href="https://github.com/mohamad-fawzy" target="_blank"><img src="./img/icon-frontend/icons8-github-144.png" alt=""></a>
+                <a href="https://t.me/mo_291084" target="_blank"><img src="./img/icon-frontend/icons8-telegram-480.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/mohamedweb-developer/" target="_blank"><img src="./img/icon-frontend/icons8-linkedin-480.png" alt=""></a>
 
             </div>
             <div class="copy"> © oct 2023 Set<span>UP </span>By Mohamed alborolusy </div>
